Add basic behavior to Recipes and Shopping List pages

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,11 @@
-
+<a href="#" class="list-group-item clearfix">
+    <div class="media">
+        <div class="media-body">
+            <h4 class="list-group-item-heading media-heading">{{recipe.name}}</h4>
+            <p class="list-group-item-text">{{recipe.description}}</p>
+        </div>
+        <div class="media-right">
+            <img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="media-object" style="max-height: 80px;">
+        </div>
+    </div>
+</a>
