--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,18 +6,7 @@
 <hr>
 <div class="row">
   <div class="col-xs-12">
-    <a href="#" *ngFor="let recipe of recipes" class="list-group-item clearfix">
-      <div class="media">
-            <div class="media-body">
-              <h4 class="list-group-item-heading media-heading">{{recipe.name}}</h4>
-              <p class="list-group-item-text">{{recipe.description}}</p>
-            </div>
-            <div class="media-right">
-                <img [src]="recipe.imagePath" alt="{{ recipe.name }}" 
-                  class="media-object" style="max-height: 100px;">
-            </div>        
-      </div>
-    </a>
-    <app-recipe-item></app-recipe-item>
+    <app-recipe-item *ngFor="let recipe of recipes" [recipe]="recipe"
+      (click)="onSelectRecipe(recipe)"></app-recipe-item>
   </div>
 </div>
