--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,6 +1,8 @@
 <div class="row">
   <div class="col-xs-12">
-    <img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="img-responsive center-block" style="max-height: 350px;">
+    <img [src]="recipe.imagePath" alt="{{ recipe.name }}" 
+    class="img-responsive center-block" 
+    style="max-height: 300px;">
   </div>
 </div>
 <div class="row">
@@ -15,20 +17,27 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">To Shopping List</a></li>
+        <li><a href="#" (click)="onAddToShoppingList()">To Shopping List</a></li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
 </div>
+<hr>
 <div class="row">
   <div class="col-xs-12">
     {{ recipe.description }}
   </div>
 </div>
+<hr>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <p>Ingredients:</p>
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+        {{ingredient.name}} - {{ingredient.amount}}
+      </li>
+    </ul>
   </div>
 </div>
