--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,7 @@
-<a href="#" class="list-group-item clearfix">
+<a class="list-group-item clearfix" 
+    style="cursor: pointer;"
+    [routerLink]="[recipe.id]"
+    routerLinkActive="active">
     <div class="media">
         <div class="media-body">
             <h4 class="list-group-item-heading media-heading">{{recipe.name}}</h4>
