--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,6 @@
 <a class="list-group-item clearfix" 
     style="cursor: pointer;"
-    [routerLink]="[recipe.id]"
+    [routerLink]="[recipeIndex]"
     routerLinkActive="active">
     <div class="media">
         <div class="media-body">
