--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,6 +6,8 @@
 <hr>
 <div class="row">
   <div class="col-xs-12">
-    <app-recipe-item *ngFor="let recipe of recipes" [recipe]="recipe"></app-recipe-item>
+    <app-recipe-item *ngFor="let recipe of recipes; let i = index" 
+      [recipeIndex]="i" 
+      [recipe]="recipe"></app-recipe-item>
   </div>
 </div>
