--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,21 +1,35 @@
 <div class="row">
   <div class="col-xs-12">
-    <form autocomplete="off">
+    <form autocomplete="off" (ngSubmit)="onSubmitItem()" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" #nameInput>
+          <input type="text" id="name" class="form-control"
+            name="name" #name="ngModel" [ngModel] required>
+          <span class="error-message"
+            *ngIf="!name.valid && name.touched">
+            Please enter a name!
+          </span>
         </div>
         <div class="col-sm-2 form-group">
           <label for="amout">Amount</label>
-          <input type="number" id="amount" class="form-control" #amountInput>
+          <input type="number" id="amount" class="form-control" 
+            name="amout" ngModel #amout="ngModel" required pattern="^[1-9]+[0-9]*$">
+          <span class="error-message"
+            *ngIf="!amout.valid && amout.touched">
+            Please enter a valid amout!
+          </span>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" (click)="onAddIngredient()" type="button" style="margin-right: 5px;">Add</button>
-          <button class="btn btn-danger" type="button" style="margin-right: 5px;">Delete</button>
-          <button class="btn btn-primary" (click)="onClearIngredient()" type="button">Clear</button>
+          <button class="btn btn-success" [disabled]="!f.valid" type="submit">
+            {{editMode ? 'Update' : 'Add'}}
+          </button>
+          <button class="btn btn-danger" type="button" [disabled]="editedItemIndex == null" (click)="onDeleteItem()">
+            Delete
+          </button>
+          <button class="btn btn-primary" (click)="onClearItem()" type="button">Clear</button>
         </div>
       </div>
     </form>
