--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,6 +14,8 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                <li><a routerLink="/signup">Register</a></li>
+                <li><a routerLink="/signin">Login</a></li>
                 <li appDropdown class="dropdown">
                     <a class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
