--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,8 +15,8 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <ng-template [ngIf]="!authService.isAuthenticated()">
-                    <li><a routerLink="/signup">Register</a></li>
-                    <li><a routerLink="/signin">Login</a></li>
+                    <li routerLinkActive="active"><a routerLink="/signup">Register</a></li>
+                    <li routerLinkActive="active"><a routerLink="/signin">Login</a></li>
                 </ng-template>
                 <li><a (click)="onLogout()" *ngIf="authService.isAuthenticated()">Logout</a></li>
                 <li appDropdown class="dropdown" *ngIf="authService.isAuthenticated()">
