--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -14,12 +14,12 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <ng-template [ngIf]="!authService.isAuthenticated()">
+                <ng-template [ngIf]="!isAuthenticated()">
                     <li routerLinkActive="active"><a routerLink="/signup">Register</a></li>
                     <li routerLinkActive="active"><a routerLink="/signin">Login</a></li>
                 </ng-template>
-                <li><a (click)="onLogout()" *ngIf="authService.isAuthenticated()">Logout</a></li>
-                <li appDropdown class="dropdown" *ngIf="authService.isAuthenticated()">
+                <li><a (click)="onLogout()" *ngIf="isAuthenticated()">Logout</a></li>
+                <li appDropdown class="dropdown" *ngIf="isAuthenticated()">
                     <a class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a (click)="onSaveData()">Save Data</a></li>
