Restructure app to follow Redux pattern (global app state) by using NgRx

--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,7 +6,7 @@
 <hr>
 <div class="row">
   <div class="col-xs-12">
-    <app-recipe-item *ngFor="let recipe of recipes; let i = index" 
+    <app-recipe-item *ngFor="let recipe of (recipeState | async).recipes; let i = index" 
       [recipeIndex]="i" 
       [recipe]="recipe"></app-recipe-item>
   </div>
