--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-xs-12">
-    <img [src]="recipe.imagePath" alt="{{ recipe.name }}" 
+    <img [src]="(recipeState | async).recipes[id].imagePath" alt="{{ (recipeState | async).recipes[id].name }}" 
     class="img-responsive center-block" 
     style="max-height: 300px;">
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>{{ recipe.name }}</h1>
+    <h1>{{ (recipeState | async).recipes[id].name }}</h1>
   </div>
 </div>
 <div class="row">
@@ -27,7 +27,7 @@
 <hr>
 <div class="row">
   <div class="col-xs-12">
-    {{ recipe.description }}
+    {{ (recipeState | async).recipes[id].description }}
   </div>
 </div>
 <hr>
@@ -35,7 +35,7 @@
   <div class="col-xs-12">
     <p>Ingredients:</p>
     <ul class="list-group">
-      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+      <li class="list-group-item" *ngFor="let ingredient of (recipeState | async).recipes[id].ingredients">
         {{ingredient.name}} - {{ingredient.amount}}
       </li>
     </ul>
